# statsgate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXAMPLES.md  LIMITATIONS.md
statsgate/: __init__.py  __main__.py  gate.py
tests/: test_statsgate.py
