[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "statsgate"
version = "0.1.0"
description = "Catch impossible or inconsistent reported statistics (GRIM, SD-range, t/p-value checks) before they become confident AI claims."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["statistics", "research-integrity", "GRIM", "SPRITE", "statcheck", "verification", "ai-safety", "claim-checking"]
dependencies = []

[project.scripts]
statsgate = "statsgate.__main__:main"

[tool.setuptools.packages.find]
include = ["statsgate*"]
